# rust-lottie-skia

./: .gitignore  Cargo.toml  PARITY.md  README.md
crates/lottie-core/: Cargo.toml
crates/lottie-core/src/: animatable.rs  expressions.rs  lib.rs  modifiers.rs  renderer.rs
crates/lottie-core/tests/: spatial_bezier.rs  test_dash.rs
crates/lottie-data/src/: lib.rs  model.rs
crates/lottie-skia/: Cargo.toml
crates/lottie-skia/src/: lib.rs
crates/lottie-skia/tests/: compositing.rs  render_test.rs
examples/viewer/: Cargo.toml
examples/viewer/assets/: repeater_test.json  spinner.json  text_reveal.json
examples/viewer/src/: main.rs
