[package]
name = "lottie-core"
version.workspace = true
edition.workspace = true

[dependencies]
lottie-data.workspace = true
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
kurbo.workspace = true
thiserror.workspace = true
base64 = "0.22.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "animator_bench"
harness = false
